# ProgKo

./: .gitignore  README.md
img/: img_names.txt
src/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  cmake_install.cmake  main.cpp
