cmake_minimum_required(VERSION 2.8)
project( IMAGE )
find_package( OpenCV REQUIRED )
find_package(MPI REQUIRED) 
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
add_executable( Main main.cpp )
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpicxx)
target_link_libraries(Main ${MPI_C_LIBRARIES})
target_link_libraries( Main ${OpenCV_LIBS} )